--- a/css/components/forms-company.css
+++ b/css/components/forms-company.css
@@ -53,7 +53,7 @@
     background: #FFFFFF;
     position: absolute;
     top: 0;
-    /* right: 200%; */
+    right: 200%;
 }
 #sectionCompany #formWork .second_div button {
     height: 9%;
@@ -61,8 +61,6 @@
     position: absolute;
     bottom: 0;
 }
-
-
 
 /* Estilos de la barra de navegaciòn */
 #sectionCompany nav {
