--- a/css/components/inputs.css
+++ b/css/components/inputs.css
@@ -7,6 +7,7 @@
     margin-bottom: 5%;
     padding-left: 3%;
     outline: none;
+    box-sizing: border-box;
 }
 .input-forms:focus {
     border: 2px solid #BDBDBD;
