--- a/css/pages/safeguards.css
+++ b/css/pages/safeguards.css
@@ -12,14 +12,14 @@ main section .first_article {
 }
 main section .first_article .first_div {
     height: 100%;
-    width: 40%;
+    width: 35%;
     position: relative;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
 }
 main section .first_article .first_div label {
-    padding: 5%;
+    padding: 10% 0 5% 5%;
     font-weight: 700;
     color: #424242;
     font-size: 1.1em;
@@ -33,7 +33,7 @@ main section .first_article .first_div .container__codeEquipment {
     border: 2px solid #EEEEEE;
     border-radius: 5px;
     background: #F5F5F5;
-    margin: 2% 0 10% 5%;
+    margin: 2% 0 15% 5%;
 }
 main section .first_article .first_div .container__codeEquipment div {
     height: 100%;
@@ -70,6 +70,10 @@ main section .first_article .first_div .container__codeEquipment div:last-child 
     height: 100%;
     width: 100%;
     border: none;
+    padding-right: 0;
+    padding-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
     background: none;
     overflow: hidden;
 }
@@ -92,20 +96,77 @@ main section .first_article .first_div h2 {
     font-size: 1.3em;
     font-weight: 900;
     color: #212121;
+    padding-bottom: 7%;
 }
 
 main section .first_article .second_div {
     height: 100%;
-    width: 60%;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
 }
+table {
+    margin-bottom: 5%;
+    height: 75%;
+    width: 90%;
+    border-collapse: collapse;
+    box-sizing: border-box;
+    table-layout: fixed;
+    border: 2px solid #EEEEEE;
+}
+table thead {
+    background: #FAFAFA;
+    color: #757575;
+}
+table thead tr th { text-align: center; }
+table thead tr th:first-child { width: 20%; }
+table thead tr th { width: 60%; }
+table thead tr th:last-child {
+    width: 20%;
+}
+table caption {
+text-align: left;
+}
 
+td,
+th {
+padding: 6px;
+text-align: left;
+vertical-align: top;
+word-wrap: break-word;
+}
 
+thead {
+border-bottom: 1px solid #dbdbdb;
+border-bottom: 1px solid #dbdbdb;
+}
 
+tfoot {
+border-top: 1px solid #dbdbdb;
+border-top: 1px solid #dbdbdb;
+}
+
+tbody tr:nth-child(even) {
+background-color: #efefef;
+background-color: #efefef;
+}
+
+tbody tr:nth-child(even) button {
+background-color: #f7f7f7;
+background-color: #f7f7f7;
+}
+
+tbody tr:nth-child(even) button:hover {
+background-color: #fff;
+background-color: #fff;
+}
+  
 
 main nav {
     height: 100%;
     width: 15%;
-    background: blueviolet;
     position: relative;
 }
