--- a/css/pages/safeguards.css
+++ b/css/pages/safeguards.css
@@ -163,8 +163,64 @@ tbody tr:nth-child(even) button:hover {
 background-color: #fff;
 background-color: #fff;
 }
-  
-
+.divParent__modal {
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0, 0, 0, 0.8);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.divParent__modal .containerItems__modal {
+    height: 20%;
+    width: 35%;
+    background: #FFF;
+    border: 2px solid #EEEEEE;
+    position: relative;
+    border-radius: 5px;
+}
+.divParent__modal .containerItems__modal div:first-child {
+    height: 30%;
+    width: 100%;
+    background: #EEEEEE;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 900;
+    font-size: 1.1em;
+    color: #212121;
+    box-sizing: border-box;
+}
+.divParent__modal .containerItems__modal div:last-child {
+    height: 70%;
+    width: 100%;
+    display: flex;  
+    justify-content:space-around;
+    align-items: center;
+    flex-direction: row;
+    box-sizing: border-box;
+}
+.divParent__modal .containerItems__modal div:last-child button:first-child {
+    height: 40%;
+    width: 40%;
+    border-radius: 5px;
+    border: none;
+    color: #EEEEEE;
+    font-weight: bold;
+    background: #B71C1C;
+    position: relative;
+}
+.divParent__modal .containerItems__modal div:last-child button:last-child {
+    height: 40%;
+    width: 40%;
+    border-radius: 5px;
+    border: none;
+    color: #EEEEEE;
+    font-weight: bold;
+    background: #833F0E;
+    position: relative;
+}
 main nav {
     height: 100%;
     width: 15%;
