--- a/css/pages/safeguards.css
+++ b/css/pages/safeguards.css
@@ -3,6 +3,7 @@ main section {
     height: 100%;
     width: 85%;
     position: relative;
+    overflow: hidden;
 }
 main section .first_article {
     height: 100%;
@@ -109,12 +110,13 @@ main section .first_article .second_div {
     position: relative;
 }
 table {
-    margin-bottom: 5%;
+    margin-top: 5%;
     height: 75%;
     width: 90%;
     border-collapse: collapse;
     box-sizing: border-box;
     table-layout: fixed;
+    background: #FAFAFA;
     border: 2px solid #EEEEEE;
 }
 table thead {
@@ -221,8 +223,70 @@ background-color: #fff;
     background: #833F0E;
     position: relative;
 }
+.container-button__auth {
+    margin-top: 5%;
+    height: 15%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.container-button__auth button {
+    height: 50%;
+    width: 24%;
+    border: none;
+    color: #F5F5F5;
+    font-weight: 700;
+    font-size: .9em;
+    border-radius: 5px;
+}
+#auth__button { background: #833F0E; }
+#cancel__button { background:  rgba(183, 28, 28, 0.9); }
+#observation_button { background: #616161; }
+#observation__auth-textarea {
+    height: 20%;
+    width: 90%;
+    position: absolute;
+    resize: none;
+    border-radius: 5px;
+    padding: 2% 0  0 2%;
+    outline: none;
+    box-sizing: border-box;
+    background: #FAFAFA;
+    color: #757575;
+    border: 2px solid #757575;
+    box-shadow: 0px 0px 10px 0px #424242;
+}
+.textarea__hidden {
+    bottom: 200%;
+}
+/* Estilos de la seccion de devolucion */
+main section .second_article {
+    height: 100%;
+    width: 100%;
+    background: #833F0E;
+    position: relative;
+    overflow: hidden;
+}
 main nav {
     height: 100%;
     width: 15%;
     position: relative;
+    box-sizing: border-box;
 }
+main nav ul {
+    margin-top: 20%;
+    height: 10%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 7%;
+    border-left: 3px solid #F5F5F5;
+    box-sizing: border-box;
+}
+main nav ul li { user-select: none; font-size: 1.1em;}
+main nav ul li:first-child {
+    padding-bottom: 7%;
+}
+.li-selected { color: #1A73E8; }
