--- a/css/pages/inventory_equipments.css
+++ b/css/pages/inventory_equipments.css
@@ -185,6 +185,26 @@ table tbody #none-equipment td div {
 table tbody #none-equipment td div img {
     width: 25%;
 }
+table tbody .table-row {
+    height: auto;
+    width: 100%;
+    position: relative;
+    box-sizing: border-box;
+    border-left: 2px solid #EEEEEE;
+    border-bottom: 2px solid #EEEEEE;
+}
+table tbody .table-row td {
+    box-sizing: border-box;
+    padding: 1% 1%;
+    color: #424242;
+    font-size: .8em;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    text-align: center;
+    vertical-align: middle;
+}
+table tbody .table-row:last-child { border-bottom: none; }
 table tfoot { height: 10%; width: 100%; position: relative; box-sizing: border-box; }
 table tfoot tr { height: 100%; width: 100%; position: relative; }
 table tfoot tr td {
